# quark-local-agi

./: .gitignore  =3.8.0  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_GENERATION_INTEGRATION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MODEL_DEVELOPMENT_IMPLEMENTATION_COMPLETE.md  MODEL_DEVELOPMENT_INTEGRATION_STATUS.md  NATURAL_LANGUAGE_CODING_SETUP.md  PILLAR_HARMONY_STATUS.md  PROJECT_STRUCTURE.md  QUARK_MODELS_INTEGRATION.md  QUARK_MODEL_TRAINING_SUMMARY.md  QUARK_STARTUP_FIX.md  QUARK_STATUS_SUMMARY.md  README.md  __init__.py  docker-compose.yml  install_missing_deps.py  main.py  pyproject.toml  quark  setup.py  setup_training.sh  training_requirements.txt
.github/workflows/: ci.yml  codeql.yml
agents/: action_agent.py  adaptive_model_agent.py  autonomous_advancement_agent.py  autonomous_decision_agent.py  autonomy_agent.py  base.py  code_generation_agent.py  coding_assistant_agent.py  continuous_learning_agent.py  continuous_training_agent.py  creative_intelligence_agent.py  dataset_discovery_agent.py  emotional_intelligence_agent.py  execution_agent.py  explainability_agent.py  generation_agent.py  governance_agent.py  intent_classifier.py  interpretation_agent.py  knowledge_graph_agent.py  leader_agent.py  memory_agent.py  meta_learning_agent.py  metrics_agent.py  negotiation_agent.py  nlu_agent.py  planning_agent.py  rag_agent.py  reasoning_agent.py  response_generation_agent.py  retrieval_agent.py  safety_agent.py  self_improvement_agent.py  self_monitoring_agent.py  social_agent.py  social_understanding_agent.py  streaming_agent.py  tool_discovery_agent.py
alignment/: README.md  __init__.py  adversarial_testing.py  alignment_monitor.py  content_filtering.py  emotional_safety.py  ethical_practices.py  rlhf_agent.py
autonomy/: __init__.py  autonomous_goals.py
cli/: async_cli.py  autonomous_decision_cli.py  cli.py  cloud_cli.py  code_generation_cli.py  creative_intelligence_cli.py  deployment_cli.py  frontend_cli.py  higher_intelligence_cli.py  intelligence_cli.py  interactive_cli.py  knowledge_graph_cli.py  memory_cli.py  meta_learning_cli.py  metrics_cli.py  negotiation_cli.py  safety_cli.py  self_improvement_cli.py  streaming_cli.py  superintelligence_cli.py  tool_discovery_cli.py  web_browser_cli.py
config/: Dockerfile  ci.yml  logging_config.py  model_planning.yml  pyproject.toml  requirements.txt  setup.py
core/: async_orchestrator.py  base.py  capability_bootstrapping.py  cloud_integration.py  context_window_manager.py  evaluation_framework.py  immutable_safety_rules.py  memory_eviction.py  meta_model  metrics.json  metrics.py  model_scoping.py  orchestrator.py  orchestrator_async.py  router.py  safety_enforcement.py  safety_guardrails.py  streaming_manager.py  system_protection.py  use_cases_tasks.py  web_browser.py  websocket_manager.py
data_collection/: training_data.json  web_crawler.py
deployment/: nginx.conf  prometheus.yml
docs/: API_REFERENCE.md  ASYNC_ORCHESTRATION.md  AUTOSTART_SETUP.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  FRONTEND_UI.md  MODEL_DEVELOPMENT_IMPLEMENTATION.md  MODEL_DEVELOPMENT_INTEGRATION_SUMMARY.md  MODEL_DEVELOPMENT_QUICKSTART.md  MODEL_DEVELOPMENT_ROADMAP.md  PILLAR_29_COMPLETION_SUMMARY.md  PILLAR_MODEL_DEVELOPMENT_MAPPING.md  README.md  README_update.md  SETUP_GUIDE.md  STARTUP_GUIDE.md  STARTUP_OPTIMIZATION.md  USER_GUIDE.md  model_scope_report.json
governance/: __init__.py  ethical_governance.py
knowledge_graphs/: README.md  __init__.py  entity_extractor.py  graph_reasoner.py  knowledge_graph.py  relationship_extractor.py  world_model.py
memory/: __init__.py  long_term_memory.py
meta_learning/: README.md  __init__.py  meta_learning_agent.py  meta_learning_orchestrator.py  performance_data.json  performance_monitor.py  pipeline_configurations.json  pipeline_reconfigurator.py  self_reflection_agent.py
metrics/: intent_classifications.jsonl  request_metrics.jsonl
model_development/: architecture_report.json  architecture_selector.py
reasoning/: __init__.py  generalized_reasoning.py
scripts/: ai_assistant.sh  auto_start.sh  background_intelligence_improver.py  background_preloader.py  check_env.py  check_ready.sh  cleanup_models.sh  com.camdouglas.quark.plist  download_models.py  fast_startup.py  install_autostart.sh  install_shell.sh  install_startup.sh  instant_startup.py  integrate_model_development.py  launch.sh  launch_training.py  live_password_demo.py  mac_startup_agent.plist  meta_profile.sh  meta_shell.sh  optimized_startup.py  overnight_comprehensive_training.py  preload_models.py  quark  quark_auto_chat.sh  quark_chat.py  quark_clean.sh  quark_code.py  quark_code_integration.py  quark_commands.sh  quark_continuous_training.py  quark_daemon.sh  quark_fast_startup.py  quark_instant_startup.py  quark_launcher  quark_optimized_startup.py  quark_profile.sh  quark_profile_minimal.sh  quark_setup_summary.sh  (+23 more)
social/: __init__.py  social_intelligence.py
tests/: __init__.py  comprehensive_pillar_check.py  final_status_report.py  functional_test_runner.py  meta_model.py  run_tests.py  test_agent.py  test_detailed_runner.py  test_emotional_safety.py  test_memory_agent.py  test_memory_detailed.py  test_memory_system.py  test_meta_learning.py  test_orchestrator.py  test_phase_3.py  test_phase_4.py  test_phase_8_superintelligence.py  test_pillar_13.py  test_pillar_14.py  test_pillar_15.py  test_pillar_16.py  test_pillar_17.py  test_pillar_18.py  test_pillar_19.py  test_pillar_20.py  test_pillar_21.py  test_pillar_28_negotiation.py  test_pillar_29_tool_discovery.py  test_pillar_30_autonomous_decision.py  test_pillar_31_creative_intelligence.py  test_pillar_32_emotional_intelligence.py  test_pillar_33_social_understanding.py  test_pillar_5_orchestrator.py  test_pillar_5_simple.py  test_pillar_9.py  test_pillars_21_22_23.py  test_pillars_24_25.py  test_pillars_5_6_7_8.py  test_pillars_final.py  test_pillars_simple.py  (+3 more)
training/: datasets.py  evaluate.py  train.py
web/: app.py  fastapi_app.py  health_check.py  metrics_server.py  web.py
(+64 files in other folders)
