[project]
name = "meta_model_ai"
version = "0.1.0"
description = "A terminal-based multi-agent AI assistant built on open-source models."
authors = [
  { name = "Cam Douglas", email = "cam@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "click>=8.2",
  "transformers>=4.54",
  "llama-cpp-python>=0.3",
  "chromadb>=0.3",
  "requests>=2.32",
  "spacy>=3.5",
  "prometheus-client>=0.16"
]

[project.scripts]
meta-model = "meta_model.cli:cli"
memory     = "meta_model.memory_cli:memory"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

